# desafio_AWS_bigdata

./: .gitattributes  README.md  analizando_palavras.ipynb  pyproject.toml
