[tool.poetry]
name = "projeto_dio_aws"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.19.12"
mrjob = "^0.7.4"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
